[gd_scene load_steps=20 format=3 uid="uid://cdrc1qlfdrr2f"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_ld8cn"]
[ext_resource type="Texture2D" uid="uid://cblcsys1a53p3" path="res://assets/game/bg/field_temp.jpg" id="1_xgweq"]
[ext_resource type="Texture2D" uid="uid://bmeykj52gn6a5" path="res://assets/ui/header_bg.png" id="2_5k2rg"]
[ext_resource type="Texture2D" uid="uid://demu3ij8tlmsl" path="res://assets/game/head/count1.png" id="3_blu5f"]
[ext_resource type="PackedScene" uid="uid://c2i2u3j54rnpu" path="res://assets/game/animations/cat.tscn" id="3_ejefy"]
[ext_resource type="Texture2D" uid="uid://bs4gjex1wmbve" path="res://assets/ui/footer_bg.png" id="3_m1jyi"]
[ext_resource type="Texture2D" uid="uid://ma7jvr1845lj" path="res://assets/game/head/count2.png" id="4_fxfwm"]
[ext_resource type="Texture2D" uid="uid://dcy0eylkb6lve" path="res://assets/game/head/round.png" id="5_j5a7s"]
[ext_resource type="Texture2D" uid="uid://dte3vwlhxmcgn" path="res://assets/game/spells/fight_button.png" id="7_ex2rl"]
[ext_resource type="Texture2D" uid="uid://cjmhults188lh" path="res://assets/game/spells/m1.png" id="8_0anl8"]
[ext_resource type="Texture2D" uid="uid://ctj5u1eafxj2m" path="res://assets/game/spells/m2.png" id="9_bmp7c"]
[ext_resource type="Texture2D" uid="uid://b3uha4nhnw4he" path="res://assets/game/spells/m3.png" id="10_wm3i4"]
[ext_resource type="Texture2D" uid="uid://c7owpamqx5myw" path="res://assets/game/spells/p1.png" id="11_wx3ou"]
[ext_resource type="Texture2D" uid="uid://b4a1wyvxa2afo" path="res://assets/game/spells/p2.png" id="12_h0fb3"]
[ext_resource type="Texture2D" uid="uid://p1mudxgx4rla" path="res://assets/game/spells/p3.png" id="13_lh688"]
[ext_resource type="PackedScene" uid="uid://bc1qrum2m26d8" path="res://assets/game/animations/bes.tscn" id="19_d6v85"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5bgcr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_blu5f")
}, {
"duration": 1.0,
"texture": ExtResource("4_fxfwm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ssr4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_j5a7s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_wbhyu"]
frames = 6
frame_0/texture = ExtResource("8_0anl8")
frame_1/texture = ExtResource("9_bmp7c")
frame_1/duration = 1.0
frame_2/texture = ExtResource("10_wm3i4")
frame_2/duration = 1.0
frame_3/texture = ExtResource("11_wx3ou")
frame_3/duration = 1.0
frame_4/texture = ExtResource("12_h0fb3")
frame_4/duration = 1.0
frame_5/texture = ExtResource("13_lh688")
frame_5/duration = 1.0

[node name="main_game" type="Node2D"]
script = ExtResource("1_ld8cn")

[node name="bes" parent="." instance=ExtResource("19_d6v85")]
top_level = true
light_mask = 0
visibility_layer = 2
z_index = 1
texture_filter = 1
position = Vector2(893, 206)

[node name="bes2" parent="." instance=ExtResource("19_d6v85")]
z_index = 2
position = Vector2(1034, 439)

[node name="bes3" parent="." instance=ExtResource("19_d6v85")]
z_index = 2
position = Vector2(1151, 201)

[node name="cat" parent="." instance=ExtResource("3_ejefy")]
z_index = 2
position = Vector2(108, 220)

[node name="cat2" parent="." instance=ExtResource("3_ejefy")]
z_index = 2
position = Vector2(335, 221)

[node name="cat3" parent="." instance=ExtResource("3_ejefy")]
z_index = 2
position = Vector2(144, 437)

[node name="cat4" parent="." instance=ExtResource("3_ejefy")]
z_index = 2
position = Vector2(352, 437)

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(640, 240)
texture = ExtResource("1_xgweq")

[node name="header_bg" type="Sprite2D" parent="."]
position = Vector2(640, 35)
texture = ExtResource("2_5k2rg")

[node name="count1" type="AnimatedSprite2D" parent="header_bg"]
position = Vector2(-300, 0)
sprite_frames = SubResource("SpriteFrames_5bgcr")
frame = 1

[node name="count2" type="AnimatedSprite2D" parent="header_bg"]
position = Vector2(300, 0)
sprite_frames = SubResource("SpriteFrames_5bgcr")

[node name="round" type="AnimatedSprite2D" parent="header_bg"]
sprite_frames = SubResource("SpriteFrames_ssr4a")

[node name="footer_bg" type="Sprite2D" parent="."]
position = Vector2(640, 645)
texture = ExtResource("3_m1jyi")

[node name="fight" type="TextureButton" parent="footer_bg"]
offset_left = -134.0
offset_top = -75.0
offset_right = 126.0
offset_bottom = 75.0
texture_normal = ExtResource("7_ex2rl")

[node name="sp1" type="TextureButton" parent="footer_bg"]
offset_left = -639.0
offset_top = -74.0
offset_right = -466.0
offset_bottom = 75.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[node name="sp2" type="TextureButton" parent="footer_bg"]
offset_left = -468.0
offset_top = -74.0
offset_right = -295.0
offset_bottom = 76.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[node name="sp3" type="TextureButton" parent="footer_bg"]
offset_left = -295.0
offset_top = -75.0
offset_right = -122.0
offset_bottom = 75.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[node name="sp4" type="TextureButton" parent="footer_bg"]
offset_left = 123.0
offset_top = -78.0
offset_right = 296.0
offset_bottom = 72.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[node name="sp5" type="TextureButton" parent="footer_bg"]
offset_left = 295.0
offset_top = -76.0
offset_right = 468.0
offset_bottom = 74.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[node name="sp6" type="TextureButton" parent="footer_bg"]
offset_left = 466.0
offset_top = -75.0
offset_right = 639.0
offset_bottom = 75.0
texture_normal = SubResource("AnimatedTexture_wbhyu")

[connection signal="ready" from="footer_bg/sp3" to="." method="_on_sp_3_ready"]
